update; clean up css files remove redundant code  or comments and update imports in site.css

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -1,4 +1,4 @@
-@import url('../fonts/Montserrat.css');
+@import url('./fonts/Montserrat.css');
 @import url('./base/reset.css');
 @import url('./base/typography.css');
 @import url('./elements/buttons.css');
@@ -6,5 +6,3 @@
 @import url('./elements/blocks.css');
 @import url('./site-layout.css');
 @import url('./responsive.css');
-
-/* @import url("./components/sidebar.css"); */
