--- a/src/css/base/reset.css
+++ b/src/css/base/reset.css
@@ -1,16 +1,12 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 * {
-    padding: 0;
-    margin: 0;
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-}
-
-html {
-    box-sizing: border-box;
-}
-
-body::-webkit-scrollbar {
-    display: none;
+  margin: 0;
+  padding: 0;
 }
 
 input::-webkit-outer-spin-button,
@@ -19,24 +15,79 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+ul {
+  list-style: none;
+}
+
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
 input[type='number'] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  text-wrap: pretty;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
+#root, #__next {
+  isolation: isolate;
+}
+
+/* 
+* {
+  padding: 0;
+  margin: 0;
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+}
+
+html {
+  box-sizing: border-box;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
-/* Fix images behavior - block elements have no width and height by default */
 img {
-    display: block;
-    width: 100%;
-    height: auto;
-    overflow: clip;
-}
-
-li {
-    list-style: none;
-}
+  display: block;
+  width: 100%;
+  height: auto;
+  overflow: clip;
+} */
