--- a/src/pages/dashboard/assets/add-friends/add-friends.module.css
+++ b/src/pages/dashboard/assets/add-friends/add-friends.module.css
@@ -1,32 +1,29 @@
 .friendsForm {
     display: flex;
-    flex-direction: row;
-    gap: 0.5em;
+    flex-direction: column;
     justify-content: flex-start;
 
     input[type='number'] {
         width: 100%;
-        height: 2.2em;
     }
 }
-.customBlockContact {
-    flex: initial;
-    background: var(--secondary-color);
-    border-radius: var(--border-radius-component);
-    position: relative;
-    overflow: hidden;
-    padding: 1em;
+
+.customBtn {
+    background: var(--custom-btn-bg-color);
+    border: 1px solid var(--primary-hover-color);
+    border-radius: var(--border-radius-small);
+    color: var(--primary-hover-color);
+    font-size: 1em;
+    font-weight: var(--font-weight-bold);
+    line-height: normal;
+    transition: all 0.1s;
+    padding: 6px 20px;
+    text-align: center;
+    width: 100%;
 }
 
-.customBlockExchange,
-.customBlockContact {
-    background: var(--third-bg-color);
-}
-
-.customBlockContact p a {
-    color: var(--heading-color);
-}
-
-.customBlockContact p a:hover {
+.customBtn:hover {
+    background: var(--primary-hover-color);
     color: var(--white-color);
+    border-color: var(--primary-hover-color);
 }
