--- a/src/pages/header/assets/user-menu/user-menu.module.css
+++ b/src/pages/header/assets/user-menu/user-menu.module.css
@@ -8,17 +8,18 @@
             min-width: 450px;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 4;
-            top: 38px;
+            top: 40px;
             right: 0px;
         }
     }
 }
 
 .profileImage {
-    border-radius: 0.3em;
-    width: 35px;
-    height: auto;
-    margin-right: 0.2em;
+    position: inherit;
+    margin-top: 4px;
+    border-radius: 50%;
+    max-height: 30px;
+    overflow: hidden;
 }
 
 .userMenuContainer {
@@ -43,7 +44,7 @@
     min-width: 400px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 5;
-    top: 38px;
+    top: 40px;
     left: -320px; /* Adjust the left position as needed */
 }
 
