--- a/src/components/lists/rate/list-rate.module.css
+++ b/src/components/lists/rate/list-rate.module.css
@@ -3,7 +3,11 @@
     align-items: center;
     justify-content: space-between;
     margin-right: 1em;
+}
 
+strong {
+    display: 'block';
+    text-align: 'right';
 }
 
 .currencyWrapper {
