--- a/src/css/base/typography.css
+++ b/src/css/base/typography.css
@@ -93,7 +93,7 @@ p {
     font-weight: var(--font-weight-normal);
 }
 
-ul li {
+ul, li {
     color: var(--p-color);
     font-size: var(--card-title-font-size);
     font-weight: var(--font-weight-normal);
@@ -108,7 +108,7 @@ button {
 label {
     display: inline-block;
     padding-right: 0.6em;
-    width: 100px;
+    max-width: 100px;
     text-align: right;
 }
 
