--- a/src/components/inputs/form-input/form-input.module.css
+++ b/src/components/inputs/form-input/form-input.module.css
@@ -7,7 +7,7 @@
 .formGroup {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin-bottom: 0.5em;
 }
@@ -27,7 +27,6 @@ small {
 
 .input {
     padding-left: 0.7em;
-    margin-left: 0em;
     outline: none;
     text-align: left;
 }
@@ -51,7 +50,7 @@ small {
 input[type='radio'] {
     width: 1em;
     height: 1em;
-    border: 0em;
+    border: 0;
     margin: 0;
 }
 
@@ -59,22 +58,3 @@ input[type='checkbox'] {
     width: 1em;
     height: 1em;
 }
-
-/* input:not([type='submit'], [type='button'], [type='radio'], [type='checkbox']) {
-    height: 2em;
-    width: auto;
-    margin-bottom: 0.5em;
-    padding-left: 0.7em;
-    margin-left: 0em;
-    border: 1px solid #ddd;
-    border-radius: var(--border-radius-small);
-    outline: none;
-    text-align: left;
-}
-
-input:not([type='submit'], [type='button'], [type='radio'], [type='checkbox']):focus {
-    border-color: var(--primary-hover-color);
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-    outline: none;
-}
-    */
