--- a/src/components/lists/transactions/transactions-list.module.css
+++ b/src/components/lists/transactions/transactions-list.module.css
@@ -11,6 +11,11 @@
     justify-content: space-between;
 }
 
+.strong {
+    display: 'block';
+    text-align: 'right';
+}
+
 .detailsWrapper {
     display: flex;
     align-content: space-between;
