--- a/src/components/modals/transactions/modal.module.css
+++ b/src/components/modals/transactions/modal.module.css
@@ -57,8 +57,8 @@
 
 @media (min-width: 1200px) {
     .background {
-        height: calc(100vh - 40px);
-        top: 40px;
+        height: calc(100dvh - 39px);
+        top: 39px;
     }
 
     .container {
@@ -68,7 +68,7 @@
 
 @media (min-width: 768px) {
     .background {
-        height: calc(100vh - 40px);
-        top: 40px;
+        height: calc(100dvh - 39px);
+        top: 39px;
     }
 }
