--- a/src/css/pages/profileDetails.css
+++ b/src/css/pages/profileDetails.css
@@ -1,4 +1,4 @@
-.custom-block-profile p {
+/* .custom-block-profile p {
     font-size: var(--menu-font-size);
     padding-bottom: 0.3em;
 }
@@ -80,4 +80,4 @@
     margin: auto;
     position: relative;
     margin-bottom: 2em;
-}
+} */
