--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 800px) and (max-width: 1000px) {
+/* @media screen and (min-width: 800px) and (max-width: 1000px) {
 
     h5 {
         font-size: 1.3em;
@@ -9,4 +9,4 @@
     html {
         font-size: 16px;
     }
-}
+} */
