--- a/src/css/site-layout.css
+++ b/src/css/site-layout.css
@@ -1,4 +1,4 @@
-main {
+/* main {
     flex: 1;
     display: flex;
     justify-content: flex-start;
@@ -17,4 +17,4 @@ main {
     display: flex;
     flex-direction: column;
     min-height: 100dvh;
-}
+} */
