--- a/src/pages/dashboard/assets/add-friends/add-friends.module.css
+++ b/src/pages/dashboard/assets/add-friends/add-friends.module.css
@@ -2,10 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-
-    input[type='number'] {
-        width: 100%;
-    }
+    margin-top: 0.5em;
 }
 
 .customBtn {
