--- a/src/pages/dashboard/assets/banking-actions/banking-actions.module.css
+++ b/src/pages/dashboard/assets/banking-actions/banking-actions.module.css
@@ -15,6 +15,8 @@
 .transactionBtns {
     display: flex;
     justify-content: center;
-    gap: 1.2em;
+    align-items: center;
     overflow: visible;
+    gap: 1.2em;
+    margin-top: 1em;
 }
