--- a/src/pages/header/assets/app-bar.module.css
+++ b/src/pages/header/assets/app-bar.module.css
@@ -1,8 +1,11 @@
 .headerContainer {
     display: flex;
-    background-color: var(--heading-color);
-    flex-direction: row;
-    justify-content: space-between;
     flex: 0 0 max(40px);
-    max-height: 40px;
+    justify-content: space-between;
+    align-items: center;
+    justify-items: center;
+
+    background-color: var(--heading-color);
+    max-height: 100%;
+    padding: 0 1em;
 }
