--- a/src/pages/header/assets/auth-menu/assets/notifications.module.css
+++ b/src/pages/header/assets/auth-menu/assets/notifications.module.css
@@ -8,7 +8,7 @@
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 4;
         top: 40px;
-        left: -350px;
+        right: -50px;
     }
 }
 
@@ -130,7 +130,7 @@
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 5;
     top: 40px;
-    left: -300px;
+    right: -65px;
 }
 
 .accept {
