--- a/src/pages/header/assets/user-menu/user-menu.module.css
+++ b/src/pages/header/assets/user-menu/user-menu.module.css
@@ -5,18 +5,18 @@
             position: absolute;
             background-color: #f9f9f9;
             border-radius: 4px;
-            min-width: 450px;
+            min-width: 200px;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 4;
             top: 40px;
-            right: 0px;
+            right: -12px;
         }
     }
 }
 
 .profileImage {
-    position: inherit;
-    margin-top: 4px;
+    position: relative;
+    margin-top: 4.5px;
     border-radius: 50%;
     max-height: 30px;
     overflow: hidden;
@@ -30,8 +30,7 @@
         .dropdownMenu {
             display: flex;
             flex-direction: column;
-            gap: 0.2em;
-            padding: 0.5em;
+            padding: 1em;
         }
     }
 }
@@ -41,17 +40,17 @@
     position: absolute;
     background-color: #f9f9f9;
     border-radius: 4px;
-    min-width: 400px;
+    min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 5;
     top: 40px;
-    left: -320px; /* Adjust the left position as needed */
+    right: -12px;
 }
 
 .dropdownItem {
     display: flex;
     align-items: center;
-    padding: 0.5em;
+    padding: 1em;
     text-decoration: none;
     color: inherit;
 
