--- a/src/components/inputs/form-input/form-input.module.css
+++ b/src/components/inputs/form-input/form-input.module.css
@@ -1,60 +1,79 @@
 :root {
     --error-color: red;
-    --font-size-medium: 16px;
+    --font-size-medium: 14px;
     --font-size-small: 12px;
+    --spacing-sm: 0.5em;
+    --spacing-md: 0.5em;
+    --input-height: 2em;
+    --label-width: 100px;
+    --border-radius: 0.5em;
 }
 
 .formGroup {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
     align-items: center;
-    margin-bottom: 0.5em;
+    gap: var(--spacing-md);
+    margin-bottom: var(--spacing-md);
+    min-height: var(--input-height);
+}
+
+label {
+    flex: 0 0 var(--label-width);
+    text-align: right;
+    padding-right: var(--spacing-sm);
+    font-size: var(--font-size-medium);
+}
+
+.input {
+    flex: 1;
+    height: var(--input-height);
+    padding: 0 var(--spacing-md);
+    border: 1px solid #ccc;
+    border-radius: var(--border-radius);
+    font-size: var(--font-size-medium);
+    transition: border-color 0.2s, box-shadow 0.2s;
+    width: 100%;
+}
+
+.input:focus {
+    border-color: var(--primary-hover-color);
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.2);
+    outline: none;
 }
 
 .error {
     color: var(--error-color);
     font-size: var(--font-size-small);
-    height: 1em;
-    width: fit-content;
+    margin-top: var(--spacing-sm);
+    width: 100%;
+    text-align: left;
+    margin-left: var(--label-width);
 }
 
 small {
     color: var(--error-color);
-    font-size: 16px;
-    margin-left: 0.2em;
+    font-size: var(--font-size-small);
+    margin-left: var(--spacing-sm);
 }
 
-.input {
-    padding-left: 0.7em;
-    outline: none;
-    text-align: left;
-}
+@media (max-width: 480px) {
+    .formGroup {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: var(--spacing-sm);
+    }
 
-.input:focus {
-    border-color: var(--primary-hover-color);
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-    outline: none;
-}
+    label {
+        flex: 0 0 auto;
+        text-align: left;
+    }
 
-.input[type='text'],
-.input[type='email'],
-.input[type='password'],
-.input[type='tel'],
-.input[type='number'] {
-    height: 2em;
-    border: 1px solid #ddd;
-    border-radius: var(--border-radius-small);
-}
+    .input {
+        max-width: 100%;
+    }
 
-input[type='radio'] {
-    width: 1em;
-    height: 1em;
-    border: 0;
-    margin: 0;
-}
-
-input[type='checkbox'] {
-    width: 1em;
-    height: 1em;
+    .error {
+        margin-left: 0;
+    }
 }
