--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -28,10 +28,9 @@
 }
 
 .formContent {
-    padding: 2rem;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    padding: 2em;
 }
 
 .formContent header {
