--- a/src/pages/dashboard/assets/exchange-rates/exchange-rate.module.css
+++ b/src/pages/dashboard/assets/exchange-rates/exchange-rate.module.css
@@ -2,4 +2,14 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    gap: 0.5em;
+}
+
+.title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: var(--heading-color);
+    margin-bottom: 0.2em;
+    font-size: 1.2em;
 }
