--- a/src/components/cards/empty/empty-card.module.css
+++ b/src/components/cards/empty/empty-card.module.css
@@ -19,7 +19,7 @@
     border-radius: var(--border-radius-component);
     position: relative;
     overflow: hidden;
-    padding: 0.7em 1em;
+    padding: 1em;
 
     p {
         color: var(--black-color);
