--- a/src/pages/header/assets/auth-menu/assets/notifications/notification-item/notification-item.module.css
+++ b/src/pages/header/assets/auth-menu/assets/notifications/notification-item/notification-item.module.css
@@ -7,7 +7,7 @@
     border: 1px solid #ddd;
     transition: 0.2s;
 
-    .btnGroup {
+    .btnContainer {
         display: none;
     }
 
@@ -54,7 +54,7 @@
     &:hover {
         box-shadow: 0 0.3em 12px rgba(0, 0, 0, 0.2);
 
-        .btnGroup {
+        .btnContainer {
             display: flex;
             gap: 0.2em;
         }
