update primary color and increase base font size for improved readability

--- a/src/css/base/typography.css
+++ b/src/css/base/typography.css
@@ -1,7 +1,7 @@
 :root {
     --white-color: #ffffff;
     --black-color: #000000;
-    --primary-color: #41a6d1;
+    --primary-color: #1678fb;
     --primary-hover-color: #1678fb;
     --secondary-color: #44cfcb;
     --section-bg-color: #eee;
@@ -38,7 +38,7 @@
 }
 
 html {
-    font: 14px/1.5 var(--body-font-family);
+    font: 16px/1.5 var(--body-font-family);
 }
 
 body,
