--- a/src/css/base/typography.css
+++ b/src/css/base/typography.css
@@ -1,4 +1,6 @@
 :root {
+    --body-font-size: 16px;
+
     --white-color: #ffffff;
     --black-color: #000000;
     --primary-color: #1678fb;
@@ -35,10 +37,12 @@
     --font-weight-bold: 600;
 
     --hero-aspect-ratio: 93.52/53.2;
+
+    --border-radius: 0.5rem;
 }
 
 html {
-    font: 16px/1.5 var(--body-font-family);
+    font: var(--body-font-size) / 1.5 var(--body-font-family);
 }
 
 body,
