--- a/src/pages/assets/navbar/navbar.module.css
+++ b/src/pages/assets/navbar/navbar.module.css
@@ -23,10 +23,15 @@
     text-align: center;
 
     a {
-        border: 1px solid var(--primary-hover-color);
+        border: 1px solid var(--primary-color);
         margin-left: 0em;
         padding: 0.3em 1em;
-        color: var(--primary-hover-color);
+        color: var(--primary-color);
+        border-radius: var(--border-radius);
+
+        font-weight: 500;
+        background-color: transparent;
+        transition: all 0.1s;
     }
 }
 
