refactor InfoForm component; replace buttons with FormInput for improved consistency and styling

--- a/src/pages/register/assets/info-form/info-form.module.css
+++ b/src/pages/register/assets/info-form/info-form.module.css
@@ -6,3 +6,10 @@
     align-self: flex-end;
     margin-right: 3em;
 }
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    gap: 1em;
+    margin-top: 1em;
+}
