refactor NavigationItem component; improve code structure and styling consistency in navigation item CSS

--- a/src/components/lists/nav/navigation-item.module.css
+++ b/src/components/lists/nav/navigation-item.module.css
@@ -1,29 +1,20 @@
-.nav-tabs .navLink {
-    border-radius: 20px;
-    border-top: 0;
-    border-right: 0;
-    border-left: 0;
+.navLink {
+    display: inline-block;
+    position: relative;
+    font-size: inherit;
+    font-weight: inherit;
+    width: calc(100% - 2em);
+
+    border-radius: var(--border-radius);
+    margin-bottom: 0.1em;
+    margin-left: 1em;
+    padding: 0.7em;
     color: var(--p-color);
-    font-size: var(--menu-font-size);
-    font-weight: var(--font-weight-normal);
-    padding: 15px 25px;
     transition: all 0.3s;
 }
 
 .sidebarIcons {
-    width: 20px;
-    padding-right: 0.5em;
-}
-
-.navLink {
-    border-radius: var(--border-radius-small);
-    color: var(--p-color);
-    font-size: var(--menu-font-size);
-    display: inline-block;
-    position: relative;
-    margin-bottom: 0.1em;
-    margin-left: 1em;
-    padding: 0.2em;
+    padding-right: 1em;
 }
 
 .navLink.active,
