refactor NavBar component; adjust padding and layout for improved styling consistency

--- a/src/pages/assets/navbar/navbar.module.css
+++ b/src/pages/assets/navbar/navbar.module.css
@@ -1,16 +1,22 @@
 .sidebarMenu {
     display: none;
-    padding-top: 20px;
+    padding-top: 14px;
     min-width: 150px;
     flex: 0 0 max(15dvw);
     background: var(--white-color);
+    height: calc(100dvh - 40px);
 
     .nav {
         list-style: none;
+        position: relative;
+        height: calc(100dvh - 54px);
+        padding: 0;
+        margin: 0;
 
         li:last-child {
             position: absolute;
             bottom: 1em;
+            width: 100%;
         }
     }
 }
@@ -18,14 +24,14 @@
 .featureBox {
     background-color: var(--section-bg-color);
     border-radius: var(--border-radius-medium);
-    padding: 0.5em 0em;
-    margin: 0.5em;
+    margin: 1em;
     text-align: center;
 
     a {
         border: 1px solid var(--primary-color);
         margin-left: 0em;
-        padding: 0.3em 1em;
+        padding: 0.5em 1em;
+        margin-bottom: 1em;
         color: var(--primary-color);
         border-radius: var(--border-radius);
 
