--- a/src/components/lists/friend/list-friend.module.css
+++ b/src/components/lists/friend/list-friend.module.css
@@ -28,7 +28,7 @@
 }
 
 .avatar:hover {
-    border: 2px solid var(--primary-hover-color);
+    border: 2px solid var(--primary-color);
 }
 
 .list {
