--- a/src/components/lists/nav/navigation-item.module.css
+++ b/src/components/lists/nav/navigation-item.module.css
@@ -15,7 +15,7 @@
     font-weight: inherit;
     width: calc(100% - 2em);
 
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius-small);
     margin-bottom: 0.1em;
     margin-left: 1em;
     padding: 0.7em;
