refactor transaction modals; improve structure and styling of forms, update class names, and enhance CSS for better consistency

--- a/src/components/modals/transactions/modal.module.css
+++ b/src/components/modals/transactions/modal.module.css
@@ -11,6 +11,34 @@
     z-index: 1000;
 }
 
+.formGroup {
+    /* display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: left; */
+    margin-bottom: 1.5rem;
+    width: 100%;
+}
+
+.formContent {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
+    header {
+        margin-bottom: 2rem;
+        align-self: center;
+    }
+
+    footer {
+        margin-top: 2rem;
+        display: flex;
+        justify-content: space-between;
+        font-size: 1em;
+    }
+}
+
 .container {
     background: white;
     padding: 1.5rem;
@@ -18,6 +46,14 @@
     width: 100%;
     max-width: 400px;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+.customForm {
+    border-radius: var(--border-radius-large);
+    padding: 0.4em 1.4em;
+    outline: none;
+    transition: all 0.3s;
+    display: flex;
 }
 
 .header {
@@ -48,17 +84,8 @@
     color: #374151;
 }
 
-.formGroup {
-    margin-bottom: 1.5rem;
-    width: 100%;
-}
-
 .formControl {
     width: 100%;
-}
-
-.footer {
-    margin-top: 2rem;
 }
 
 .buttonPrimary {
@@ -74,7 +101,7 @@
 }
 
 .buttonPrimary:hover {
-    background-color: var(--primary-hover-color, #3651d4);
+    background-color: var(--primary-color, #3651d4);
 }
 
 @media (max-width: 480px) {
