refactor CSS styles; update hover colors and border properties for consistency across components

--- a/src/pages/assets/navbar/navbar.module.css
+++ b/src/pages/assets/navbar/navbar.module.css
@@ -52,7 +52,7 @@
         padding: 0.5em 1em;
         margin-bottom: 1em;
         color: var(--primary-color);
-        border-radius: var(--border-radius);
+        border-radius: var(--border-radius-small);
 
         font-weight: 500;
         background-color: transparent;
