--- a/src/pages/reset-password/resetPassword.module.css
+++ b/src/pages/reset-password/resetPassword.module.css
@@ -32,7 +32,7 @@
 
 .formContainer input:hover,
 .formContainer input:focus {
-    border-color: var(--primary-hover-color);
+    border-color: var(--primary-color);
 }
 
 .formContent {
@@ -67,7 +67,7 @@
     }
 
     .buttonPrimary:hover {
-        background: var(--primary-hover-color);
+        background: var(--primary-color);
         color: var(--white-color);
     }
 }
