--- a/src/pages/dashboard/assets/add-friends/add-friends.module.css
+++ b/src/pages/dashboard/assets/add-friends/add-friends.module.css
@@ -11,8 +11,8 @@
 
 .customBtn {
     background: var(--custom-btn-bg-color);
-    border: 1px solid var(--primary-hover-color);
-    color: var(--primary-hover-color);
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
     font-weight: var(--font-weight-bold);
     transition: all 0.1s;
     /*  line-height: normal;
@@ -22,7 +22,7 @@
 }
 
 .customBtn:hover {
-    background: var(--primary-hover-color);
+    background: var(--primary-color);
     color: var(--white-color);
-    border-color: var(--primary-hover-color);
+    border-color: var(--primary-color);
 }
