--- a/src/pages/dashboard/assets/last-transactions/last-transactions.module.css
+++ b/src/pages/dashboard/assets/last-transactions/last-transactions.module.css
@@ -1,8 +1,8 @@
 .customBtn {
     background: var(--custom-btn-bg-color);
-    border: 1px solid var(--primary-hover-color);
+    border: 1px solid var(--primary-color);
     border-radius: var(--border-radius-small);
-    color: var(--primary-hover-color);
+    color: var(--primary-color);
     font-size: 1em;
     font-weight: var(--font-weight-bold);
     line-height: normal;
@@ -12,7 +12,7 @@
 }
 
 .customBtn:hover {
-    background: var(--primary-hover-color);
+    background: var(--primary-color);
     color: var(--white-color);
-    border-color: var(--primary-hover-color);
+    border-color: var(--primary-color);
 } 
