--- a/src/pages/dashboard/assets/quick-send-money/assets/menu/actions-menu.module.css
+++ b/src/pages/dashboard/assets/quick-send-money/assets/menu/actions-menu.module.css
@@ -8,7 +8,7 @@
 }
 
 .threeDotsIcon:hover {
-    color: var(--primary-hover-color);
+    color: var(--primary-color);
     transition: 0.1s ease;
 }
 
@@ -31,7 +31,7 @@
     margin: 0.3em;
 }
 .actionButton:hover {
-    color: var(--primary-bg-color);
+    color: var(--accent-bg-color);
     border-radius: 1em;
     background-color: whitesmoke;
 }
