--- a/src/pages/header/assets/auth-menu/assets/notifications/notification-item/notification-item.module.css
+++ b/src/pages/header/assets/auth-menu/assets/notifications/notification-item/notification-item.module.css
@@ -37,8 +37,8 @@
 
         &:hover {
             color: white;
-            background-color: var(--primary-hover-color);
-            border-color: var(--primary-hover-color);
+            background-color: var(--primary-color);
+            border-color: var(--primary-color);
         }
     }
 
