--- a/src/pages/header/assets/auth-menu/assets/user-menu/user-menu.module.css
+++ b/src/pages/header/assets/auth-menu/assets/user-menu/user-menu.module.css
@@ -55,7 +55,7 @@
     color: inherit;
 
     &:hover {
-        background-color: var(--primary-hover-color);
+        background-color: var(--primary-color);
         color: white;
     }
 }
