--- a/src/pages/header/assets/login-menu/LoginMenu.module.css
+++ b/src/pages/header/assets/login-menu/LoginMenu.module.css
@@ -49,7 +49,7 @@
             font-size: medium;
 
             &:hover {
-                background-color: var(--primary-hover-color);
+                background-color: var(--primary-color);
                 color: white;
             }
         }
@@ -82,9 +82,9 @@
         }
 
         .buttonLogin:hover {
-            color: var(--primary-hover-color);
+            color: var(--primary-color);
             border-color: transparent;
-            border: 1px solid var(--primary-hover-color);
+            border: 1px solid var(--primary-color);
             border-top-left-radius: 0.6em;
             border-bottom-left-radius: 0.6em;
         }
@@ -106,7 +106,7 @@
         }
 
         .buttonRegister:hover {
-            background: var(--primary-hover-color);
+            background: var(--primary-color);
             color: var(--white-color);
         }
 
