--- a/src/pages/register/assets/info-form/info-form.module.css
+++ b/src/pages/register/assets/info-form/info-form.module.css
@@ -1,15 +1,48 @@
-.error {
-    color: red;
-    font-size: 10px;
-    width: fit-content;
-    display: inline;
-    align-self: flex-end;
-    margin-right: 3em;
+.formContainer {
+    background: #fff;
+    border-radius: var(--border-radius-medium);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    min-width: 200px;
+    align-self: center;
+    margin: 0 auto;
 }
 
-.footer {
+.formContent {
+    padding: 2rem;
     display: flex;
-    justify-content: space-between;
-    gap: 1em;
-    margin-top: 1em;
+    flex-direction: column;
+    align-items: stretch;
+
+    .formGroup {
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+        align-items: left;
+    }
+
+    .error {
+        color: red;
+        font-size: 10px;
+        width: fit-content;
+        display: inline;
+        align-self: flex-end;
+        margin-right: 3em;
+    }
+
+    header {
+        margin-bottom: 2rem;
+        align-self: center;
+    }
+
+    footer {
+        display: flex;
+        justify-content: space-between;
+        gap: 1em;
+        margin-top: 1em;
+    }
 }
+
+/* .formContainer input:hover,
+.formContainer input:focus {
+    border-color: var(--primary-color);
+} */
