--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -6,14 +6,20 @@
     background: #fff;
     border-radius: var(--border-radius-medium);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    min-width: 200px;
     align-self: center;
     margin: 0 auto;
+
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.5em;
+    }
 }
 
 .formContainer input:hover,
 .formContainer input:focus {
-    border-color: var(--primary-hover-color);
+    border-color: var(--primary-color);
 }
 
 .formContent {
