refactor: update notification item layout by changing message and date elements for improved readability

--- a/src/pages/header/assets/auth-menu/assets/notifications/notification-item/notification-item.module.css
+++ b/src/pages/header/assets/auth-menu/assets/notifications/notification-item/notification-item.module.css
@@ -21,6 +21,11 @@
         justify-items: center;
         align-items: center;
         width: 100%;
+
+        p {
+            margin: 0;
+            padding: 0;
+        }
     }
 
     .date {
